--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   
   # 1. 定时运行：每6小时自动运行一次
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "*/10 * * * *"
   
   # 2. 手动触发：允许从Actions选项卡手动运行此工作流
   workflow_dispatch:
