--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: Generate Contribution Snake Animation
 on:
   # 触发器：定义此工作流何时运行
   
-  # 1. 定时运行：每6小时自动运行一次
+  # 1. 定时运行：每2小时自动运行一次
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "* */2 * * *"
   
   # 2. 手动触发：允许从Actions选项卡手动运行此工作流
   workflow_dispatch:
